# audio-compare

./: .gitignore  README.md  TDD.org  flake.nix  meson.build
.cache/clangd/index/: main.c.2BD0735F97140190.idx  track.c.C37A5C55B9A9EC18.idx  track.h.759796BA40A31534.idx  waveform.c.B8CE37C896D6333C.idx  waveform.h.E0A456F94BC71611.idx
.github/workflows/: ci.yml  package.yml
data/: org.mmxgn.audiocompare.desktop
packaging/: audio-compare.spec
packaging/debian/: changelog  control
src/: main.c  player.c  player.h  track.c  track.h  waveform.c  waveform.h
